# ccbar

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/: release-notes-v0.1.0.md
.github/workflows/: release.yml
scripts/: audit_totals.py  audit_v2.py
src/: App.tsx  TrayPopup.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_oauth.rs  codex_pricing.rs  codex_sessions.rs  lib.rs  live_quota.rs  main.rs  pricing.rs  sessions.rs  tray.rs  types.rs  usage.rs
src/components/: BackToTop.tsx  CodexLoginGate.tsx  Daily.tsx  Hero.tsx  LoginGate.tsx  Models.tsx  ProviderTabs.tsx  QuotaPill.tsx  UsageBar.tsx  Windows.tsx
src/lib/: api.ts  format.ts  mockData.ts  mockTauri.ts  quotaPill.ts  types.ts
src/views/: ClaudeDashboard.tsx  CodexDashboard.tsx  types.ts
web/: .gitignore  README.md  astro.config.mjs  package.json  playwright.config.mjs  pnpm-lock.yaml
web/scripts/: _diag-page.mjs  capture-app-screenshots.mjs
web/src/components/: AppPreview.astro  Bento.astro  BentoCell.astro  Footer.astro  LiveCheck.tsx  Masthead.astro  Reveal.tsx
web/src/layouts/: BaseLayout.astro
web/src/pages/: dashboard.astro  index.astro  install.astro  login.astro  privacy.astro  signup.astro
web/src/styles/: global.css
web/tests/: visual.spec.mjs
