[package]
name = "ccbar"
version = "0.1.0"
description = "Local-first desktop meter for Claude Code and Codex CLI usage"
authors = ["riftzen-bit <binb53339@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/riftzen-bit/ccbar"
homepage = "https://github.com/riftzen-bit/ccbar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
webbrowser = "1"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

